kilai/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-istio-virtualservice
  namespace: istio-system
spec:
  hosts:
    - "*" 
  gateways:
    - kiali-ingress-gateway
  http:
    - match:
        - port: 15443
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
